added ticket modal and paystack integration

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/countdown.js"></script>
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
+      <script src="https://js.paystack.co/v1/inline.js"></script>
 
 </head>
 
@@ -122,7 +123,7 @@
         </div>
       </div>
       <div class="container_btn_ticket">
-        <button class="btn_ticket font_bold" >BUY TICKET</button>
+        <button id="open_modal" class="btn_ticket font_bold" >BUY TICKET</button>
       </div>
     </div>
     <div class="section_2_second">
@@ -273,6 +274,93 @@
       <img src="image/logo_nb_full.png" class="footer_logo_nb">
     </div>
   </footer>
+
+  <!-- BUY TICKET MODAL -->
+  <!-- <button id="open_modal">Open Ticket Modal</button> -->
+  <div id="modal" class="mfp-hide container_popup">
+    <!-- <p>X</p> -->
+    <div class="popup_form">
+      <div class="card_header">
+        <!-- header -->
+        <img class="logo" src="image/logo.svg">
+        <span class="page_title">checkout</span>
+        <span class="ticket_title"> 30 Billion World Tour
+          <!-- — <span id="quantity">1 </span>
+          <span id="ticketClass"> Regular </span>
+          Ticket(s) -->
+        </span>
+        <div class="ticket_price">
+          <p class="ticket_price_title">You'll be paying</p>
+          <p class="ticket_price_amount"><span class="currency">NGN</span><span id="total"> 0</span><span class="currency">.00</span></p>
+          <!-- NGN 25,000 -->
+        </div>
+      </div>
+      <div class="card_body">
+        <div class="container_form">
+        <div class="form_row_1">
+          <div class="select-style container_selector_ticket">
+            <select id="selector_ticket">
+              <option data-value='{"id":"","ticketClass":"","price":"","isAvailable":true}'>Select a ticket</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470a","ticketClass":"Economy","price":"5000","isAvailable":true}'>Economy - NGN 5, 0000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470b","ticketClass":"Regular","price":"25000","isAvailable":true}'>Regular - NGN 25, 0000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470c","ticketClass":"VIP","price":"52000", "isAvailable":true}'>VIP - NGN 52, 0000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470d","ticketClass":"VVIP","price":"90000","isAvailable":true}'>VVIP - NGN 90, 0000</option>
+
+              <!-- Table option shows a number to call -->
+              <option data-value='{"id":"null","ticketClass":"Tables","price":"90000","isAvailable":false}'>TABLES - NGN 25, 0000</option>
+            </select>
+          </div>
+
+          <div class="select-style container_selector_quantity" >
+            <select id="selector_quantity" >
+              <option data-value='{"quantity":"0"}'> Quantity</option>
+              <option data-value='{"quantity":"1"}'>1</option>
+              <option data-value='{"quantity":"2"}'>2</option>
+              <option data-value='{"quantity":"3"}'>3</option>
+              <option data-value='{"quantity":"4"}'>4</option>
+              <option data-value='{"quantity":"5"}'>5</option>
+              <option data-value='{"quantity":"6"}'>6</option>
+              <option data-value='{"quantity":"7"}'>7</option>
+              <option data-value='{"quantity":"8"}'>8</option>
+              <option data-value='{"quantity":"9"}'>9</option>
+            </select>
+          </div>
+        </div>
+        <div class="error_message">
+          <p>
+            For table booking, call +234(0)808-080-5809 or
+
++234(0)809-999-0654.
+</p>
+
+        </div>
+        <div class="form_row_2">
+          <input class="input_fullwidth" placeholder="Full Name">
+        </div>
+
+
+
+
+
+        <!-- <div>
+        <input placeholder="Full Name">
+      </div> -->
+      <div class="form_row_3">
+        <input placeholder="Email">
+        <input placeholder="Phone Name">
+      </div>
+      <div class="form_row_4">
+      <button id="btn_send"class="btn_pay" type="submit" value="Send" onclick="payWithPaystack()">
+        <img class="btn_icon" src=" image/lock.svg">
+        Make Payment
+      </button>
+      <a id="modal_close" class="popup-modal-dismiss" href="">Dismiss</a>
+    </div>
+    </div>
+  </div>
+  </div>
+</div>
+
   <!-- Core JS file -->
   <script src="js/photoswipe.min.js"></script>
 
