updated countdown / Changed site title /  stopped related videos / Added Prices

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>30 Billion Concert </title>
+  <title>30 Billion World Tour |  </title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
@@ -133,7 +133,7 @@
 <!-- Video Section -->
 <div class="section_vid">
   <!-- <a class="play" href="https://www.youtube.com/watch?v=xKCuDxpccYM"> -->
-  <img class="play video" src="image/play.svg" href="https://www.youtube.com/watch?v=helEv0kGHd4">
+  <img class="play video" src="image/play.svg" href="https://www.youtube.com/watch?v=helEv0kGHd4&rel=0">
 <!-- </a> -->
   <!-- <a class="video" title="Test title" href="https://www.youtube.com/watch?v=xKCuDxpccYM">Open video</a> -->
 <!-- <iframe width="854" height="480" src="https://www.youtube.com/embed/helEv0kGHd4" frameborder="0" gesture="media" allowfullscreen></iframe> -->
@@ -302,9 +302,9 @@
             <select id="selector_ticket">
               <option data-value='{"id":"","ticketClass":"","price":"","isAvailable":true}'>Select a ticket</option>
               <option data-value='{"id":"5a0f784d8ead0ea4518b470a","ticketClass":"Economy","price":"5000","isAvailable":true}'>Economy - NGN 5, 0000</option>
-              <option data-value='{"id":"5a0f784d8ead0ea4518b470b","ticketClass":"Regular","price":"25000","isAvailable":true}'>Regular - NGN 25, 0000</option>
-              <option data-value='{"id":"5a0f784d8ead0ea4518b470c","ticketClass":"VIP","price":"52000", "isAvailable":true}'>VIP - NGN 52, 0000</option>
-              <option data-value='{"id":"5a0f784d8ead0ea4518b470d","ticketClass":"VVIP","price":"90000","isAvailable":true}'>VVIP - NGN 90, 0000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470b","ticketClass":"Regular","price":"10000","isAvailable":true}'>Regular - NGN 25, 0000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470c","ticketClass":"VIP","price":"30000", "isAvailable":true}'>VIP - NGN 52, 0000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470d","ticketClass":"VVIP","price":"50000","isAvailable":true}'>VVIP - NGN 90, 0000</option>
 
               <!-- Table option shows a number to call -->
               <option data-value='{"id":"null","ticketClass":"Tables","price":"90000","isAvailable":false}'>TABLES - NGN 25, 0000</option>
