--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>30 Billion World Tour |  </title>
+  <title>30 Billion Concert  </title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
@@ -284,7 +284,7 @@
         <!-- header -->
         <img class="logo" src="image/logo.svg">
         <span class="page_title">checkout</span>
-        <span class="ticket_title"> 30 Billion World Tour
+        <span class="ticket_title"> 30 Billion Concert
           <!-- — <span id="quantity">1 </span>
           <span id="ticketClass"> Regular </span>
           Ticket(s) -->
@@ -300,11 +300,11 @@
         <div class="form_row_1">
           <div class="select-style container_selector_ticket">
             <select id="selector_ticket">
-              <option data-value='{"id":"","ticketClass":"","price":"","isAvailable":true}'>Select a ticket</option>
-              <option data-value='{"id":"5a0f784d8ead0ea4518b470a","ticketClass":"Economy","price":"5000","isAvailable":true}'>Economy - NGN 5, 0000</option>
-              <option data-value='{"id":"5a0f784d8ead0ea4518b470b","ticketClass":"Regular","price":"10000","isAvailable":true}'>Regular - NGN 25, 0000</option>
-              <option data-value='{"id":"5a0f784d8ead0ea4518b470c","ticketClass":"VIP","price":"30000", "isAvailable":true}'>VIP - NGN 52, 0000</option>
-              <option data-value='{"id":"5a0f784d8ead0ea4518b470d","ticketClass":"VVIP","price":"50000","isAvailable":true}'>VVIP - NGN 90, 0000</option>
+              <option data-value='{"id":"oo","ticketClass":"","price":"","isAvailable":true}'>Select a ticket</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470a","ticketClass":"Economy","price":"5000","isAvailable":true}'>Economy - NGN 5,000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470b","ticketClass":"Regular","price":"10000","isAvailable":true}'>Regular - NGN 10,000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470c","ticketClass":"VIP","price":"30000", "isAvailable":true}'>VIP - NGN 30,000</option>
+              <option data-value='{"id":"5a0f784d8ead0ea4518b470d","ticketClass":"VVIP","price":"50000","isAvailable":true}'>VVIP - NGN 50,000</option>
 
               <!-- Table option shows a number to call -->
               <option data-value='{"id":"null","ticketClass":"Tables","price":"90000","isAvailable":false}'>TABLES - NGN 25, 0000</option>
@@ -335,7 +335,7 @@
 
         </div>
         <div class="form_row_2">
-          <input class="input_fullwidth" placeholder="Full Name">
+          <input class="input_fullwidth" id="fname" placeholder="Full Name">
         </div>
 
 
@@ -346,15 +346,15 @@
         <input placeholder="Full Name">
       </div> -->
       <div class="form_row_3">
-        <input placeholder="Email">
-        <input placeholder="Phone Name">
+        <input placeholder="Email" id="femail">
+        <input placeholder="Phone Name" id="fphone">
       </div>
       <div class="form_row_4">
       <button id="btn_send"class="btn_pay" type="submit" value="Send" onclick="payWithPaystack()">
         <img class="btn_icon" src=" image/lock.svg">
         Make Payment
       </button>
-      <a id="modal_close" class="popup-modal-dismiss" href="">Dismiss</a>
+      <a id="modal_close" class="popup-modal-dismiss" href="#">Dismiss</a>
     </div>
     </div>
   </div>
@@ -366,6 +366,7 @@
 
   <!-- UI JS file -->
   <script src="js/photoswipe-ui-default.min.js"></script>
+  <script src="js/notify.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
