--- a/index.html
+++ b/index.html
@@ -2,8 +2,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>30 Billion World Tour |  </title>
+
+  <meta charset="UTF-8">
+<meta name="description" content="2017 has been a remarkable year for Davido and The 30Billion Concert is Davido’s way of saying Thank you for the memorable year.
+The Event will be taking place at Eko Hotel on the 27th of November, 2017.Click here for your tickets.
+David Adedeji Adeleke better known by his stage name Davido, is a Nigerian recording artist, performer and record producer. His 2011 single "Dami Duro" brought his fame in the global market and was well-received throughout Nigeria and across the world. Davido started his own label, Davido Music Worldwide (DMW) in 2016 and has recordd tremendous success with the likes of Dremo and Mayorkun currently signed to the label. In July 2016, Davido signed a record deal with Sony's RCA Records.
+He has produced songs for Naeto C, Skales, Tiwa Savage and Sauce Kid as well as hit singles like If, Fall, Pere, Fia, Aye, Gobe that shook the global music industry.
+">
+<meta name="keywords" content="
+The 30Billion Concert,
+Davido Pere,
+Davido Fia,
+Davido If,
+What is the networth of Davido?,
+How much money does Davido have?,
+Who is Davido's Dad?,
+What does Davido's Dad do?,
+Davidos biggest song,
+Davido 30Billion Gang,
+Davido 30Billion in the account,
+Davido EMA Awards,
+Who inspires Davido,
+Davido and Wizkid beef,
+Between Davido and Wizkid who is better?,
+Davido 30Billion concert,
+Davido's Biggest concert of the year,
+Between Davido and Wizkid who is richer?,
+The Thirty Billion Gang Concert,
+Where can I get the 30 Billion Gang Concert Tickets?,
+Is the 30 Billion Gang Concert at Eko Hotel?,
+Davido Baby Mamas,
+Davido's Children,
+Davido and Caroline Ekanem,
+Davido's Beef with Caroline Ekanem,
+Davido and Rolex wristwatch,
+Davido OBO,
+Davido Shina Rambo Dad,
+Davido Record label,
+Davido and Pepsi,
+OMO Baba Olowo
+">
+<!-- <meta name="author" content="John Doe"> -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta charset="utf-8" /> -->
+  <title>DAVIDO - 30 Billion Concert</title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
@@ -21,6 +63,8 @@
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
       <script src="https://js.paystack.co/v1/inline.js"></script>
+      <script src="js/smooth-scroll.min.js"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109935880-1"></script>
 
 </head>
 
@@ -100,30 +144,35 @@
   <!-- section 2 -->
   <div class="section_2">
     <div class="section_2_first">
-      <p class="font_bold section_title">Get Thrilled, with OBO</p>
-      <p class="section_date"><span class="font_bold">27TH</span> DECEMBER <span class="font_bold"> 2017,</span></p>
-      <p class="section_date">Eko Hotel, Lagos.</p>
+      <p id="sroll_to_ticket" class="font_bold section_title">Get Thrilled, with OBO</p>
+      <p class="section_date"><span class="font_bold">27TH</span> DECEMBER <span class="font_bold"> 2017.</span></p>
+      <p class="section_date">Available Tickets</p>
 
       <!-- <img class="section_2_logo" src="image/logo_eko.png"> -->
       <div class="container_ticket_class">
         <div class="ticket_class font_bold">
-          E
+        <p>ECONOMY</p>
+          <p class="ticket_class_price"> NGN 5,000</p>
         </div>
         <div class="ticket_class font_bold">
-          R
+          <p>REGULAR</p>
+            <p class="ticket_class_price"> NGN 10,000</p>
         </div>
         <div class="ticket_class font_bold">
-          VIP
+          <p>VIP</p>
+            <p class="ticket_class_price"> NGN 30,000</p>
         </div>
         <div class="ticket_class font_bold">
-          VVIP
+          <p>VVIP</p>
+            <p class="ticket_class_price"> NGN 50,000</p>
         </div>
         <div class="ticket_class font_bold">
-          TABLES
+          <p>TABLES</p>
+            <p class="ticket_class_price"> </p>
         </div>
       </div>
       <div class="container_btn_ticket">
-        <button id="open_modal" class="btn_ticket font_bold" >BUY TICKET</button>
+        <button id="open_modal" class="btn_ticket font_bold" >BUY TICKET NOW</button>
       </div>
     </div>
     <div class="section_2_second">
@@ -133,7 +182,7 @@
 <!-- Video Section -->
 <div class="section_vid">
   <!-- <a class="play" href="https://www.youtube.com/watch?v=xKCuDxpccYM"> -->
-  <img class="play video" src="image/play.svg" href="https://www.youtube.com/watch?v=helEv0kGHd4&rel=0">
+  <img class="play video" src="image/play.svg" href="https://www.youtube.com/watch?v=helEv0kGHd4?rel=0">
 <!-- </a> -->
   <!-- <a class="video" title="Test title" href="https://www.youtube.com/watch?v=xKCuDxpccYM">Open video</a> -->
 <!-- <iframe width="854" height="480" src="https://www.youtube.com/embed/helEv0kGHd4" frameborder="0" gesture="media" allowfullscreen></iframe> -->
@@ -271,7 +320,7 @@
         <img class="footer_sponsor" src="image/logo_pentagon.png">
         <img class="footer_sponsor" src="image/logo_achievas.png">
       </div>
-      <img src="image/logo_nb_full.png" class="footer_logo_nb">
+      <a id="nbox_logo" href="http://nairabox.com/"><img src="image/nairabox_logo.svg" class="footer_logo_nb"></a>
     </div>
   </footer>
 
