--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
 
   <meta charset="UTF-8">
 <meta name="description" content="2017 has been a remarkable year for Davido and The 30Billion Concert is Davido’s way of saying Thank you for the memorable year.
 The Event will be taking place at Eko Hotel on the 27th of November, 2017.Click here for your tickets.
-David Adedeji Adeleke better known by his stage name Davido, is a Nigerian recording artist, performer and record producer. His 2011 single "Dami Duro" brought his fame in the global market and was well-received throughout Nigeria and across the world. Davido started his own label, Davido Music Worldwide (DMW) in 2016 and has recordd tremendous success with the likes of Dremo and Mayorkun currently signed to the label. In July 2016, Davido signed a record deal with Sony's RCA Records.
+David Adedeji Adeleke better known by his stage name Davido, is a Nigerian recording artist, performer and record producer. His 2011 single 'Dami Duro' brought his fame in the global market and was well-received throughout Nigeria and across the world. Davido started his own label, Davido Music Worldwide (DMW) in 2016 and has recordd tremendous success with the likes of Dremo and Mayorkun currently signed to the label. In July 2016, Davido signed a record deal with Sony's RCA Records.
 He has produced songs for Naeto C, Skales, Tiwa Savage and Sauce Kid as well as hit singles like If, Fall, Pere, Fia, Aye, Gobe that shook the global music industry.
 ">
 <meta name="keywords" content="
@@ -47,10 +46,8 @@ OMO Baba Olowo
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta charset="utf-8" /> -->
   <title>DAVIDO - 30 Billion Concert</title>
-=======
   <meta charset="utf-8" />
   <title>30 Billion Concert  </title>
->>>>>>> f335128e9156a2c2c5a03b7d55549c09f5c5edbd
 
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
