--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ OMO Baba Olowo
 </p>
 
         </div>
-        <div class="form_row_2">
+        <div class="form_row_2" id="fm_row2">
           <input class="input_fullwidth" id="fname" placeholder="Full Name">
         </div>
 
@@ -398,7 +398,7 @@ OMO Baba Olowo
       </div> -->
       <div class="form_row_3">
         <input placeholder="Email" id="femail">
-        <input placeholder="Phone Name" id="fphone">
+        <input placeholder="Phone Number" id="fphone">
       </div>
       <div class="form_row_4">
       <button id="btn_send"class="btn_pay" type="submit" value="Send" onclick="payWithPaystack()">
