added leading zero to the seconds counter

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ OMO Baba Olowo
               <option data-value='{"id":"5a0f784d8ead0ea4518b470d","ticketClass":"VVIP","price":"50000","isAvailable":true}'>VVIP - NGN 50,000</option>
 
               <!-- Table option shows a number to call -->
-              <option data-value='{"id":"null","ticketClass":"Tables","price":"90000","isAvailable":false}'>TABLES - NGN 25, 0000</option>
+              <option data-value='{"id":"null","ticketClass":"Tables","price":"0","isAvailable":false}'>TABLES</option>
             </select>
           </div>
 
